--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,14 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<jvmArguments>
+						Djavax.net.ssl.trustStore=path/to/mykeystore.jks
+					</jvmArguments>
+					<jvmArguments>
+						Djavax.net.ssl.trustStorePassword=changeit
+					</jvmArguments>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
