--- a/pom.xml
+++ b/pom.xml
@@ -89,12 +89,7 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
-					<jvmArguments>
-						Djavax.net.ssl.trustStore=path/to/mykeystore.jks
-					</jvmArguments>
-					<jvmArguments>
-						Djavax.net.ssl.trustStorePassword=changeit
-					</jvmArguments>
+					<jvmArguments>Djdk.tls.client.protocols=TLSv1.3</jvmArguments>
 				</configuration>
 			</plugin>
 		</plugins>
