--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,7 @@ agent:
       host: cf420cc3-5bb2-446c-8411-bc92ad1aae9e.eu-central-1-0.aws.cloud.qdrant.io
       port: 6334
       api-key: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhY2Nlc3MiOiJtIn0.BxJuTApTzJaTTSAZb-pkZLtNZJ9Hpfq9QRc7RQxNng4
-      collection-name: vector_store1
+      collection-name: vector_store
       use-tls: true
 
 documentvalidationagent:
